<resources>
    <string name="E_0000000">Network timed out. Please retry later.</string>
    <string name="E_0000001">Login authentication is no longer valid. Please sign out and sign in again.</string>
    <string name="E_0000002">IP Blocked</string>
    <string name="E_0000003">Account or Password not correct</string>
    <string name="E_0000004">Your Account and IP was blocked</string>
    <string name="E_0000005">Server Error</string>
    <string name="E_0000006">Server Error</string>
    <string name="E_0000007">Server Error</string>
    <string name="E_0000008">Server Error</string>
    <string name="E_0000009">Server Error</string>
    <string name="E_0000010">Server Error</string>
    <string name="E_0000011">Server Error</string>
    <string name="E_0000012">Server Error</string>
    <string name="E_disk_space_not_enough">Storage space not enough. The file size of movie to download is %1$s. Please make sure you have at lease %2$s space.</string>
    <string name="E_download_corrupt">Download File Corrupted. Remove and download again?</string>
    <string name="E_download_expired">Expired. You cannot download this movie anymore.</string>
    <string name="E_file_not_exist">"The file to play doesn't exist."</string>
    <string name="E_no_network">No Network connection. Please check your network settings.</string>
    <string name="E_no_wifi_download_warning">No Wifi Available. Are you sure you want to download anyway?</string>
    <string name="E_no_wifi_warning">No Wifi Available. Allow download without Wifi?</string>
    <string name="E_novel_url">Load novel failed(URL Invalid).</string>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_menu_alt_shortcut_label">Alt+</string>
    <string name="abc_menu_ctrl_shortcut_label">Ctrl+</string>
    <string name="abc_menu_delete_shortcut_label">delete</string>
    <string name="abc_menu_enter_shortcut_label">enter</string>
    <string name="abc_menu_function_shortcut_label">Function+</string>
    <string name="abc_menu_meta_shortcut_label">Meta+</string>
    <string name="abc_menu_shift_shortcut_label">Shift+</string>
    <string name="abc_menu_space_shortcut_label">space</string>
    <string name="abc_menu_sym_shortcut_label">Sym+</string>
    <string name="abc_prepend_shortcut_label">Menu+</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="actor_anonymous">No name</string>
    <string name="app_name">91TV</string>
    <string name="appbar_scrolling_view_behavior">com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior</string>
    <string name="bottom_menu_actress">Actress</string>
    <string name="bottom_menu_category">Category</string>
    <string name="bottom_menu_home">Home</string>
    <string name="bottom_menu_novel">Novel</string>
    <string name="bottom_menu_profile">Profile</string>
    <string name="bottom_menu_promotion">Promotion</string>
    <string name="bottom_sheet_behavior">com.google.android.material.bottomsheet.BottomSheetBehavior</string>
    <string name="bottomsheet_action_expand_halfway">Expand halfway</string>
    <string name="change_password_dialog_success">Password updated, please use new password to login</string>
    <string name="change_password_dialog_title">Modify Password</string>
    <string name="change_password_hint_confirm_new_password">Confirm new password</string>
    <string name="change_password_hint_new_password">Fill in new password</string>
    <string name="change_password_hint_origin_password">Fill in original password</string>
    <string name="change_password_title">Modify Password</string>
    <string name="channel_highlight">Highlight</string>
    <string name="character_counter_content_description">Characters entered %1$d of %2$d</string>
    <string name="character_counter_overflowed_content_description">Character limit exceeded %1$d of %2$d</string>
    <string name="character_counter_pattern">%1$d/%2$d</string>
    <string name="chip_text">Chip text</string>
    <string name="clear_text_end_icon_content_description">Clear text</string>
    <string name="customer_service_date">Date</string>
    <string name="customer_service_feedback">My Feedback</string>
    <string name="customer_service_feedback_empty">No Feedback</string>
    <string name="customer_service_online">Online Service</string>
    <string name="customer_service_reply">Reply</string>
    <string name="customer_service_title">Customer Service</string>
    <string name="dialog_button_cancel">Cancel</string>
    <string name="dialog_button_close">Close</string>
    <string name="dialog_button_confirm">Confirm</string>
    <string name="dialog_button_contact">Contact Customer Service</string>
    <string name="dialog_button_deposit">Deposit</string>
    <string name="dialog_button_download_statement">Download Statement</string>
    <string name="dialog_button_exit">Exit</string>
    <string name="dialog_button_logout">Logout</string>
    <string name="dialog_button_no">No</string>
    <string name="dialog_button_purchase">Purchase</string>
    <string name="dialog_button_remove">Remove</string>
    <string name="dialog_button_remove_and_download">Remove and Re-Download</string>
    <string name="dialog_button_report">Report Error</string>
    <string name="dialog_button_retry">Retry</string>
    <string name="dialog_button_yes">Yes</string>
    <string name="dialog_error_title">Error</string>
    <string name="dialog_title">@string/app_name</string>
    <string name="download_content_dialog_remove_message">Remove %1$s from the queue list?</string>
    <string name="download_content_dialog_remove_title">Confirm remove?</string>
    <string name="download_content_move">To SD Card</string>
    <string name="download_content_moving_file_message">Moving File To SD card…</string>
    <string name="download_content_remove">Remove</string>
    <string name="download_content_status_done">Play</string>
    <string name="download_content_status_downloading">Downloading…</string>
    <string name="download_content_status_expired">Expired</string>
    <string name="download_content_status_missing">File Missing</string>
    <string name="download_content_status_moved">Play from SD</string>
    <string name="download_content_status_pause">Pause</string>
    <string name="download_content_title">My Download Content</string>
    <string name="drawer_menu_actress">Actress</string>
    <string name="drawer_menu_category">Category</string>
    <string name="drawer_menu_close">Close navigation drawer</string>
    <string name="drawer_menu_favorite">My Favorite</string>
    <string name="drawer_menu_home">Home</string>
    <string name="drawer_menu_logout">Logout</string>
    <string name="drawer_menu_novel">Novel</string>
    <string name="drawer_menu_open">Open navigation drawer</string>
    <string name="drawer_menu_payment">Deposit</string>
    <string name="drawer_menu_purchase">Purchase</string>
    <string name="drawer_menu_setting">Settings</string>
    <string name="drawer_navigation_content">Open/Close Drawer</string>
    <string name="error_account_email_format">Account should be email format</string>
    <string name="error_account_empty">Please fill in Account</string>
    <string name="error_account_registered">This email address has been registered</string>
    <string name="error_code_empty">Please fill in Verification Code</string>
    <string name="error_confirm_new_password_empty">Please confirm new password</string>
    <string name="error_confirm_new_password_not_match">Confirm Password does not match with password</string>
    <string name="error_confirm_password_empty">Please fill in Confirm Password</string>
    <string name="error_confirm_password_not_match">Confirm Password does not match with password</string>
    <string name="error_email_empty">Please fill in E-mail</string>
    <string name="error_email_format">E-mail format error</string>
    <string name="error_icon_content_description">Error</string>
    <string name="error_new_password_empty">Please fill in new password</string>
    <string name="error_nickname_empty">Please fill in Nickname</string>
    <string name="error_nickname_used">This nickname has been used</string>
    <string name="error_old_new_password_same">New password is the same with original password</string>
    <string name="error_old_password_empty">Please fill in original password</string>
    <string name="error_old_password_incorrect">Original Password incorrect</string>
    <string name="error_password_empty">Please fill in Password</string>
    <string name="error_password_length">Password length should have at least 8 digits</string>
    <string name="error_phone_empty">Please fill in Phone Number</string>
    <string name="error_verification_empty">Please fill in Verification Code</string>
    <string name="exo_controls_cc_disabled_description">Enable subtitles</string>
    <string name="exo_controls_cc_enabled_description">Disable subtitles</string>
    <string name="exo_controls_custom_playback_speed">%1$.2fx</string>
    <string name="exo_controls_fastforward_description">Fast forward</string>
    <string name="exo_controls_fullscreen_enter_description">Enter fullscreen</string>
    <string name="exo_controls_fullscreen_exit_description">Exit fullscreen</string>
    <string name="exo_controls_hide">Hide player controls</string>
    <string name="exo_controls_next_description">Next</string>
    <string name="exo_controls_overflow_hide_description">Hide additional settings</string>
    <string name="exo_controls_overflow_show_description">Show additional settings</string>
    <string name="exo_controls_pause_description">Pause</string>
    <string name="exo_controls_play_description">Play</string>
    <string name="exo_controls_playback_speed">Speed</string>
    <string name="exo_controls_playback_speed_normal">Normal</string>
    <string name="exo_controls_previous_description">Previous</string>
    <string name="exo_controls_rewind_description">Rewind</string>
    <string name="highlight_ranking_month">Monthly Best Top 15</string>
    <string name="highlight_ranking_top">Most Popular Top 10</string>
    <string name="highlight_ranking_year">Yearly Best Top 15</string>
    <string name="promotion_member_text_copy_link">Copy Link</string>
    <string name="promotion_member_text_qrcode_desc">Scan QRCode to download APP</string>
    <string name="promotion_member_text_save_qrcode">Save QRCode</string>
    <string name="promotion_member_text_statement">My Profit</string>
    <string name="register_button_register">Sign Up</string>
    <string name="register_hint_account">Account(Email)</string>
    <string name="register_hint_confirm_password">Confirm Password</string>
    <string name="register_hint_nickname">Nickname</string>
    <string name="register_hint_password">Password</string>
</resources>