<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout android:id="@id/layout_register" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <androidx.constraintlayout.widget.Guideline android:orientation="horizontal" android:id="@id/toolbar_guideline" android:layout_width="wrap_content" android:layout_height="wrap_content" app:layout_constraintGuide_begin="@dimen/toolbar_height" />
    <include android:id="@id/toolbar_register" android:layout_width="0.0dip" android:layout_height="@dimen/toolbar_height" app:layout_constraintBottom_toTopOf="@id/toolbar_guideline" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent" layout="@layout/layout_toolbar_text_title" />
    <EditText android:id="@id/text_register_account" android:layout_width="0.0dip" android:layout_height="@dimen/edit_text_height" android:hint="@string/register_hint_account" android:maxLines="1" android:inputType="textEmailAddress" android:imeOptions="actionNext" android:layout_marginStart="@dimen/spacing_normal" android:layout_marginEnd="@dimen/spacing_normal" app:layout_constraintBottom_toTopOf="@id/text_register_nickname" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/toolbar_guideline" app:layout_constraintVertical_bias="0.25" app:layout_constraintVertical_chainStyle="packed" />
    <EditText android:id="@id/text_register_nickname" android:layout_width="0.0dip" android:layout_height="@dimen/edit_text_height" android:layout_marginTop="@dimen/spacing_x_large" android:hint="@string/register_hint_nickname" android:maxLines="1" android:inputType="textPersonName" android:imeOptions="actionNext" android:layout_marginStart="@dimen/spacing_normal" android:layout_marginEnd="@dimen/spacing_normal" app:layout_constraintBottom_toTopOf="@id/text_register_password" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/text_register_account" />
    <EditText android:id="@id/text_register_password" android:layout_width="0.0dip" android:layout_height="@dimen/edit_text_height" android:layout_marginTop="@dimen/spacing_x_large" android:hint="@string/register_hint_password" android:maxLines="1" android:inputType="textPassword" android:imeOptions="actionNext" android:layout_marginStart="@dimen/spacing_normal" android:layout_marginEnd="@dimen/spacing_normal" app:layout_constraintBottom_toTopOf="@id/text_register_confirm_password" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/text_register_nickname" />
    <EditText android:id="@id/text_register_confirm_password" android:layout_width="0.0dip" android:layout_height="@dimen/edit_text_height" android:layout_marginTop="@dimen/spacing_x_large" android:hint="@string/register_hint_confirm_password" android:maxLines="1" android:inputType="textPassword" android:imeOptions="actionSend" android:layout_marginStart="@dimen/spacing_normal" android:layout_marginEnd="@dimen/spacing_normal" app:layout_constraintBottom_toTopOf="@id/text_register_error" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/text_register_password" />
    <TextView android:textColor="@color/color_accent" android:id="@id/text_register_error" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="@dimen/spacing_x_large" android:layout_marginStart="@dimen/spacing_normal" android:layout_marginEnd="@dimen/spacing_normal" app:layout_constraintBottom_toTopOf="@id/button_register" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/text_register_confirm_password" />
    <Button android:id="@id/button_register" android:layout_width="0.0dip" android:layout_height="@dimen/button_height" android:layout_marginTop="@dimen/spacing_x_large" android:text="@string/register_button_register" android:layout_marginStart="@dimen/spacing_normal" android:layout_marginEnd="@dimen/spacing_normal" app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/text_register_error" />
</androidx.constraintlayout.widget.ConstraintLayout>