<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout android:orientation="vertical" android:background="#16000000" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layoutDirection="ltr"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <ImageView android:layout_gravity="end|center|top" android:id="@id/exo_close" android:layout_width="@dimen/icon_size_x_large" android:layout_height="@dimen/icon_size_x_large" android:src="@drawable/ic_close" android:scaleType="center" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintTop_toTopOf="parent" />
    <ImageButton android:id="@id/exo_rew" android:background="@android:color/transparent" android:padding="@dimen/spacing_normal" android:layout_width="@dimen/icon_size_xx_large" android:layout_height="@dimen/icon_size_xx_large" android:src="@drawable/ic_rewind" android:scaleType="fitCenter" android:contentDescription="@string/exo_controls_rewind_description" app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toStartOf="@id/exo_play" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent" />
    <ImageButton android:id="@id/exo_play" android:background="@android:color/transparent" android:padding="@dimen/spacing_normal" android:layout_width="@dimen/icon_size_xx_large" android:layout_height="@dimen/icon_size_xx_large" android:src="@drawable/exo_controls_play" android:scaleType="fitCenter" android:contentDescription="@string/exo_controls_play_description" app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toStartOf="@id/exo_pause" app:layout_constraintStart_toEndOf="@id/exo_rew" app:layout_constraintTop_toTopOf="parent" />
    <ImageButton android:id="@id/exo_pause" android:background="@android:color/transparent" android:padding="@dimen/spacing_normal" android:layout_width="@dimen/icon_size_xx_large" android:layout_height="@dimen/icon_size_xx_large" android:src="@drawable/exo_controls_pause" android:scaleType="fitCenter" android:contentDescription="@string/exo_controls_pause_description" app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toStartOf="@id/exo_ffwd" app:layout_constraintStart_toEndOf="@id/exo_play" app:layout_constraintTop_toTopOf="parent" />
    <ImageButton android:id="@id/exo_ffwd" android:background="@android:color/transparent" android:padding="@dimen/spacing_normal" android:layout_width="@dimen/icon_size_xx_large" android:layout_height="@dimen/icon_size_xx_large" android:src="@drawable/ic_forward" android:scaleType="fitCenter" android:contentDescription="@string/exo_controls_fastforward_description" app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toEndOf="@id/exo_pause" app:layout_constraintTop_toTopOf="parent" />
    <TextView android:textSize="@dimen/text_size_x_small" android:textStyle="bold" android:textColor="#ffbebebe" android:id="@id/exo_position" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginBottom="@dimen/spacing_x_small" android:layout_marginStart="@dimen/spacing_normal" app:layout_constraintBottom_toTopOf="@id/exo_progress" app:layout_constraintStart_toStartOf="parent" />
    <TextView android:textSize="@dimen/text_size_x_small" android:textStyle="bold" android:textColor="#ffbebebe" android:id="@id/exo_divider" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="/" android:layout_marginStart="@dimen/spacing_x_small" app:layout_constraintBaseline_toBaselineOf="@id/exo_position" app:layout_constraintStart_toEndOf="@id/exo_position" />
    <TextView android:textSize="@dimen/text_size_x_small" android:textStyle="bold" android:textColor="#ffbebebe" android:id="@id/exo_duration" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginStart="@dimen/spacing_x_small" app:layout_constraintBaseline_toBaselineOf="@id/exo_position" app:layout_constraintStart_toEndOf="@id/exo_divider" />
    <com.google.android.exoplayer2.ui.DefaultTimeBar android:id="@id/exo_progress" android:layout_width="fill_parent" android:layout_height="25.0dip" android:layout_marginBottom="30.0dip" app:layout_constraintBottom_toBottomOf="parent" app:played_color="@color/color_accent" app:scrubber_color="@color/color_accent" />
</androidx.constraintlayout.widget.ConstraintLayout>