<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout android:id="@id/layout_promotion_member" android:background="@drawable/bg_promotion_member" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <androidx.constraintlayout.widget.Guideline android:orientation="horizontal" android:id="@id/toolbar_guideline" android:layout_width="wrap_content" android:layout_height="wrap_content" app:layout_constraintGuide_begin="@dimen/toolbar_height" />
    <include android:id="@id/toolbar_promotion_member" android:layout_width="0.0dip" android:layout_height="@dimen/toolbar_height" app:layout_constraintBottom_toBottomOf="@id/toolbar_guideline" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent" layout="@layout/layout_toolbar_text_title" />
    <Button android:id="@id/button_promotion_member_statement" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="@dimen/spacing_x_large" android:text="@string/promotion_member_text_statement" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintTop_toTopOf="@id/toolbar_guideline" />
    <ImageView android:id="@id/image_promotion_member_logo" android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/ic_logo" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/button_promotion_member_statement" />
    <ImageView android:id="@id/image_promotion_member_qrcode" android:layout_width="150.0dip" android:layout_height="150.0dip" app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/toolbar_guideline" app:layout_constraintVertical_bias="0.4" />
    <TextView android:textColor="@color/white" android:id="@id/text_promotion_member_qrcode_desc" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="@dimen/spacing_normal" android:text="@string/promotion_member_text_qrcode_desc" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/image_promotion_member_qrcode" />
    <TextView android:textColor="@color/white" android:gravity="center_horizontal" android:id="@id/text_promotion_member_rule" android:scrollbars="vertical" android:layout_width="0.0dip" android:layout_height="0.0dip" android:layout_marginTop="40.0dip" android:layout_marginBottom="40.0dip" android:paddingStart="@dimen/spacing_large" android:paddingEnd="@dimen/spacing_large" app:layout_constraintBottom_toTopOf="@id/button_promotion_member_save_qrcode" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/text_promotion_member_qrcode_desc" />
    <Button android:id="@id/button_promotion_member_save_qrcode" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_marginBottom="30.0dip" android:text="@string/promotion_member_text_save_qrcode" android:layout_marginStart="@dimen/spacing_normal" android:layout_marginEnd="@dimen/spacing_normal" app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toStartOf="@id/button_promotion_member_copy_link" app:layout_constraintStart_toStartOf="parent" />
    <Button android:textColor="@color/gray_4A" android:id="@id/button_promotion_member_copy_link" android:background="@color/white" android:layout_width="0.0dip" android:layout_height="wrap_content" android:text="@string/promotion_member_text_copy_link" android:layout_marginStart="@dimen/spacing_normal" android:layout_marginEnd="@dimen/spacing_normal" app:layout_constraintBaseline_toBaselineOf="@id/button_promotion_member_save_qrcode" app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toEndOf="@id/button_promotion_member_save_qrcode" />
    <ProgressBar android:id="@id/progress_promotion_member" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" app:layout_constraintBottom_toBottomOf="@id/image_promotion_member_qrcode" app:layout_constraintEnd_toEndOf="@id/image_promotion_member_qrcode" app:layout_constraintStart_toStartOf="@id/image_promotion_member_qrcode" app:layout_constraintTop_toTopOf="@id/image_promotion_member_qrcode" />
</androidx.constraintlayout.widget.ConstraintLayout>