<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:id="@id/layout_highlight" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <androidx.constraintlayout.widget.ConstraintLayout android:paddingTop="@dimen/spacing_small" android:paddingBottom="@dimen/spacing_normal" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <ViewFlipper android:id="@id/flipper_ad" android:layout_width="fill_parent" android:layout_height="wrap_content" android:autoStart="true" app:layout_constraintTop_toTopOf="parent" />
        <TextView android:textAppearance="@style/TextAppearance.Title.Medium" android:id="@id/text_ranking_top" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="@dimen/spacing_x_large" android:text="@string/highlight_ranking_top" android:layout_marginStart="@dimen/spacing_normal" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/flipper_ad" />
        <androidx.recyclerview.widget.RecyclerView android:orientation="horizontal" android:id="@id/recycler_ranking_top" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/spacing_normal" android:layout_marginStart="@dimen/spacing_normal" app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" app:layout_constraintTop_toBottomOf="@id/text_ranking_top" />
        <TextView android:textAppearance="@style/TextAppearance.Title.Medium" android:id="@id/text_ranking_month" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="@dimen/spacing_x_large" android:text="@string/highlight_ranking_month" android:layout_marginStart="@dimen/spacing_normal" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/recycler_ranking_top" />
        <androidx.recyclerview.widget.RecyclerView android:orientation="horizontal" android:id="@id/recycler_ranking_month" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/spacing_normal" android:layout_marginStart="@dimen/spacing_normal" app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" app:layout_constraintTop_toBottomOf="@id/text_ranking_month" />
        <TextView android:textAppearance="@style/TextAppearance.Title.Medium" android:id="@id/text_ranking_year" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="@dimen/spacing_x_large" android:text="@string/highlight_ranking_year" android:layout_marginStart="@dimen/spacing_normal" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/recycler_ranking_month" />
        <androidx.recyclerview.widget.RecyclerView android:orientation="horizontal" android:id="@id/recycler_ranking_year" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/spacing_normal" android:layout_marginStart="@dimen/spacing_normal" app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" app:layout_constraintTop_toBottomOf="@id/text_ranking_year" />
        <LinearLayout android:orientation="vertical" android:id="@id/container_group" android:layout_width="fill_parent" android:layout_height="wrap_content" app:layout_constraintTop_toBottomOf="@id/recycler_ranking_year" />
        <LinearLayout android:orientation="horizontal" android:id="@id/container_web" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/spacing_x_large" android:layout_marginStart="@dimen/spacing_normal" android:layout_marginEnd="@dimen/spacing_normal" app:layout_constraintTop_toBottomOf="@id/container_group" />
        <TextView android:textAppearance="@style/TextAppearance.Title.Medium" android:id="@id/text_recommend" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="@dimen/spacing_x_large" android:layout_marginStart="@dimen/spacing_normal" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/container_web" />
        <GridLayout android:id="@id/container_recommend" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/spacing_normal" android:columnCount="2" android:layout_marginStart="@dimen/spacing_normal" android:layout_marginEnd="@dimen/spacing_normal" app:layout_constraintTop_toBottomOf="@id/text_recommend" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>